fix the width of contact me button on mobile

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -986,6 +986,7 @@ body {
 .footer {
   position: relative;
   background: url("../images/home/content/team/bg-black.svg");
+  background-size:cover;
   width: 100%;
   height: 700px;
 
@@ -1471,6 +1472,7 @@ body {
     .contact {
       padding: 0px 48px 0px 28px;
       top: 35%;
+      width: fit-content;
       img {
         width: 18px;
         height: 18px;
@@ -1494,7 +1496,7 @@ body {
     }
 
     .socials-icons {
-      padding-right: 32px;
+      padding-right: 16px;
       img {
         width: 30px;
         height: 30px;
